# RayTracing

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: ImGui.cmake
src/: CMakeLists.txt  Camera.cpp  Camera.h  Ray.h  Renderer.cpp  Renderer.h  Scene.h  main.cpp
